# py-gcgbarbosa

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mise.toml  pyproject.toml
docs/: mkdocs.yml
src/: app.py
template/: __init__.py  app.py
tests/: test_main.py
