[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pre-commit>=4.2.0", "pyright>=1.1.398", "pytest>=8.3.5", "ruff>=0.11.2"]
docs = ["mkdocs>=1.6.1"]

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"

[tool.ruff]
exclude = [".venv", "docs"]
# Same as Black.
line-length = 128
indent-width = 4
# Assume Python 3.9
target-version = "py312"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
