[project]
name = "template"
version = "0.0.1"
description = "Starting point for Python projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["loguru>=0.7.3"]

[dependency-groups]
# docformatter for formatting docstrings
# interrogate for docstrings coverage
# bandit for insecure code patterns
# safety to check for known vulnerabilities in dependencies
dev = [
  "pre-commit>=4.2.0",
  "pyright>=1.1.398",
  "pytest-cov>=6.1.1",
  "pytest>=8.3.5",
  "ruff>=0.11.2",
  "mkdocs>=1.6.1",
  "coverage-badge>=1.1.2",
  "interrogate>=1.7.0",
  "docformatter>=1.7.5",
  "bandit>=1.8.3",
  "safety>=3.3.1",
]


[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"

[tool.ruff]
exclude = [".venv", "docs"]
# Same as Black.
line-length = 128
indent-width = 4
# Assume Python 3.9
target-version = "py312"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = false # Use double quotes (default is false, i.e., prefer double)
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["template"]

[tool.setuptools.package-data]
"template" = ["py.typed"]
